--- a/rvp_deployment.yaml
+++ b/rvp_deployment.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -6,13 +6,16 @@ metadata:
   name: reverseproxy
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: reverseproxy
   template:
     metadata:
       labels:
-        service: reverseproxy
+        app.kubernetes.io/name: reverseproxy
     spec:
       containers:
-      - image: gzamorasosa12/simple-node-proxy
+      - image: gzamorasosa12/simple-reverse-proxy
         name: reverseproxy
         imagePullPolicy: Always          
         resources:
