--- a/rvp_deployment.yaml
+++ b/rvp_deployment.yaml
@@ -8,11 +8,11 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: reverseproxy
+      app: reverseproxy
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: reverseproxy
+        app: reverseproxy
     spec:
       containers:
       - image: gzamorasosa12/simple-reverse-proxy
