--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,11 @@ events {
 http {
     server {
         listen 8080;
-        location /api/ {
-            proxy_pass http://my-app-svc:8080/;
+        location /api/v0/users {
+            proxy_pass http://udagram-api-users:8080/api/v0/users;
+        }
+        location /api/v0/feed {
+            proxy_pass http://udagram-api-feed:8080/api/v0/feed;
         }
     }
 }
